--- a/web/map.html
+++ b/web/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Live Map | Gebeta Maps</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
     <style>
         #map { height: 100vh; width: 100vw; }
         .legend-container {
@@ -35,7 +35,7 @@
         <div><span style="color:red">●</span> Driver (Busy)</div>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/map.js"></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApQOktBocnX7Veuuj-gK-hY14cCWg13_k&callback=initMap" async defer></script>  
 </body>
 </html>
